Update course links and remove social links

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     <div class="course-content">
                         <h3>HTML для начинающих</h3>
                         <p>Изучите основы HTML, создайте свою первую веб-страницу и поймите структуру веб-документов.</p>
-                        <a href="html-course.html" class="btn">Начать изучение</a>
+                        <a href="Course/html1.html" class="btn">Начать изучение</a>
                     </div>
                 </div>
                 <div class="course-card">
@@ -477,7 +477,7 @@
                     </div>
                     <div class="lesson-body">
                         <p>Собрана вся документация по HTML, изучите базовую структуру HTML-документа и все основные теги.</p>
-                        <a href="lesson-html-1.html" class="btn">Изучить</a>
+                        <a href="Course/html1.html" class="btn">Изучить</a>
                     </div>
                 </div>
                 <div class="lesson-card" data-category="html">
@@ -541,12 +541,6 @@
                 <div class="footer-column">
                     <h3>О проекте</h3>
                     <p>SKETHWebCourse - это образовательная платформа для изучения веб-разработки с нуля. Мы предлагаем лекционные и практические уроки с примерамт ппоектов для закрепления знаний.</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-vk"></i></a>
-                        <a href="#"><i class="fab fa-telegram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                    </div>
                 </div>
             </div>
             <div class="support">
