Update navigation links in html1.html

--- a/Course/html1.html
+++ b/Course/html1.html
@@ -416,12 +416,12 @@
         <div class="container nav-container">
             <div class="logo">SKETHWeb<span>Course</span></div>
             <ul class="nav-links">
-                <li><a href="/index.html">Главная</a></li>
-                <li><a href="/Course/html1.html">Курс HTML</a></li>
+                <li><a href="SKETHWebCourse/index.html">Главная</a></li>
+                <li><a href="SKETHWebCourse/Course/html1.html">Курс HTML</a></li>
                 <li><a href="css-course.html">Курс CSS</a></li>
                 <li><a href="js-course.html">Курс JavaScript</a></li>
             </ul>
-            <a href="/index.html" class="back-btn">
+            <a href="SKETHWebCourse/index.html" class="back-btn">
                 <i class="fas fa-arrow-left"></i> На главную
             </a>
         </div>
