Update links to HTML course files

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     <div class="course-content">
                         <h3>HTML для начинающих</h3>
                         <p>Изучите основы HTML, создайте свою первую веб-страницу и поймите структуру веб-документов.</p>
-                        <a href="Course/html1.html" class="btn">Начать изучение</a>
+                        <a href="html1.html" class="btn">Начать изучение</a>
                     </div>
                 </div>
                 <div class="course-card">
@@ -477,7 +477,7 @@
                     </div>
                     <div class="lesson-body">
                         <p>Собрана вся документация по HTML, изучите базовую структуру HTML-документа и все основные теги.</p>
-                        <a href="Course/html1.html" class="btn">Изучить</a>
+                        <a href="html1.html" class="btn">Изучить</a>
                     </div>
                 </div>
                 <div class="lesson-card" data-category="html">
